// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxInput renders all appearances 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-1 {
  border-color: #DADDE2;
  background-color: #FFF;
  border-style: solid;
  border-width: 1px;
  height: 15px;
  width: 15px;
  border-radius: 4px;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
}

<CheckboxInput
  appearance="standard"
  id="defaultId"
  inputLabel="Sample label"
  value="default"
>
  <ToggleInput
    appearance="standard"
    id="defaultId"
    inputLabel="Sample label"
    showInputLabel={true}
    vertAlign="center"
  >
    <div>
      <label
        className="emotion-4"
        htmlFor="defaultId"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-1"
          >
            <input
              className="emotion-0"
              id="defaultId"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
              value="default"
            />
          </div>
        </div>
        <div
          className="emotion-3"
        >
          Sample label
        </div>
      </label>
    </div>
  </ToggleInput>
</CheckboxInput>
`;

exports[`CheckboxInput renders all appearances 2`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-1 {
  border-color: #DADDE2;
  background-color: #FFF;
  border-style: solid;
  border-width: 1px;
  height: 15px;
  width: 15px;
  border-radius: 4px;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  color: #EB293A;
  fill: #EB293A;
}

<CheckboxInput
  appearance="error"
  id="defaultId"
  inputLabel="Sample label"
  value="default"
>
  <ToggleInput
    appearance="error"
    id="defaultId"
    inputLabel="Sample label"
    showInputLabel={true}
    vertAlign="center"
  >
    <div>
      <label
        className="emotion-4"
        htmlFor="defaultId"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-1"
          >
            <input
              className="emotion-0"
              id="defaultId"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
              value="default"
            />
          </div>
        </div>
        <div
          className="emotion-3"
        >
          Sample label
        </div>
      </label>
    </div>
  </ToggleInput>
</CheckboxInput>
`;

exports[`CheckboxInput renders all appearances 3`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-1 {
  border-color: #DADDE2;
  background-color: #FFF;
  border-style: solid;
  border-width: 1px;
  height: 15px;
  width: 15px;
  border-radius: 4px;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  color: #14C684;
  fill: #14C684;
}

<CheckboxInput
  appearance="success"
  id="defaultId"
  inputLabel="Sample label"
  value="default"
>
  <ToggleInput
    appearance="success"
    id="defaultId"
    inputLabel="Sample label"
    showInputLabel={true}
    vertAlign="center"
  >
    <div>
      <label
        className="emotion-4"
        htmlFor="defaultId"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-1"
          >
            <input
              className="emotion-0"
              id="defaultId"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
              value="default"
            />
          </div>
        </div>
        <div
          className="emotion-3"
        >
          Sample label
        </div>
      </label>
    </div>
  </ToggleInput>
</CheckboxInput>
`;

exports[`CheckboxInput renders with a hidden label 1`] = `
.emotion-0 {
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

.emotion-1 {
  border-color: #DADDE2;
  background-color: #FFF;
  border-style: solid;
  border-width: 1px;
  height: 15px;
  width: 15px;
  border-radius: 4px;
  position: relative;
}

.emotion-4 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.emotion-2 {
  box-sizing: border-box;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: initial;
  display: inherit;
}

.emotion-3 {
  box-sizing: border-box;
  -webkit-flex-basis: 0;
  -ms-flex-preferred-size: 0;
  flex-basis: 0;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  min-width: 0;
  width: auto;
  padding-left: 12px;
  border: 0;
  -webkit-clip: rect(0 0 0 0);
  clip: rect(0 0 0 0);
  position: absolute;
  overflow: hidden;
  margin: -1px;
  padding: 0;
  width: 1px;
  height: 1px;
}

<CheckboxInput
  appearance="standard"
  id="defaultId"
  inputLabel="Sample label"
  showInputLabel={false}
  value="default"
>
  <ToggleInput
    appearance="standard"
    id="defaultId"
    inputLabel="Sample label"
    showInputLabel={false}
    vertAlign="center"
  >
    <div>
      <label
        className="emotion-4"
        htmlFor="defaultId"
      >
        <div
          className="emotion-2"
        >
          <div
            className="emotion-1"
          >
            <input
              className="emotion-0"
              id="defaultId"
              onBlur={[Function]}
              onFocus={[Function]}
              type="checkbox"
              value="default"
            />
          </div>
        </div>
        <div
          className="emotion-3"
        >
          Sample label
        </div>
      </label>
    </div>
  </ToggleInput>
</CheckboxInput>
`;
